--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,34 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Ionic PWA
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  
+  <ion-button (click)="getCurrentPosition()" expand="block">
+    <ion-icon name="locate" slot="start"></ion-icon>
+    Get position
+  </ion-button>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <!-- present the geolocation information -->
+  <ion-card *ngIf="position">
+    <ion-card-content>
+      <ion-item>
+        <ion-icon name="location" slot="start"></ion-icon>
+        Lat: {{ position.coords.latitude }}
+      </ion-item>
+      <ion-item>
+        <ion-icon name="location" slot="start"></ion-icon>
+        Lng: {{ position.coords.longitude }}
+      </ion-item>
+
+      <ion-button (click)="share()" expand="block" color="secondary">
+        <ion-icon name="share" slot="start"></ion-icon>
+        Share!
+      </ion-button>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
